Se empieza a implementar la funcionalidad de los post

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -4,7 +4,7 @@
     <div id="container" class="container">
         <header id="header" class="header">
             {% block header %}
-                {# % include "_menu.html.twig" % #} <br />
+                {% include "_menu.html.twig" %} <br />
             {% endblock %}
         </header>
 
