--- a/templates/usuario/edit.html.twig
+++ b/templates/usuario/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('app_usuario_index') }}">back to list</a>
 
-    {{ include('usuario/_delete_form.html.twig') }}
+    {# { include('usuario/_delete_form.html.twig') } #}
 {% endblock %}
