Agregando el control de acceso

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
 
         <div id="javascripts">
             {% block javascripts %}
-                <script src="{{ asset('assets/vendor/bootstrap/js/bootstrap.bundle.min.js') }}" type="text/javascript"></script>
+                <script src="{{ asset('assets/vendor/bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js') }}" type="text/javascript"></script>
             {% endblock %}
         </div>
     </body>
