--- a/templates/_menu.html.twig
+++ b/templates/_menu.html.twig
@@ -9,10 +9,22 @@
 
       </ul>
 
-      <div class="nav-item float-end">
-        <a href="#" class="nav-link"><i class="bi bi-box-arrow-right"></i> Login</a>
-      </div>
-
+      {% if app.user %}
+        <div class="nav-item dropdown float-end">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-person"></i> {{ app.user.username }}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="{{ path('app_usuario_show', {'id': app.user.id}) }}"><i class="bi bi-person-vcard"></i> Profile</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
+            </ul>
+        </div>
+      {% else %}
+        <div class="nav-item float-end">
+          <a href="{{ path('app_login') }}" class="nav-link"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+        </div>
+      {% endif %}
     </div>
   </div>
 </nav>
