--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}Edit Post{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Post</h1>
 
     {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
