--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'loyout.html.twig' %}
 
 {% block title %}New Post{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Post</h1>
 
     {{ include('post/_form.html.twig') }}
