--- a/templates/usuario/edit.html.twig
+++ b/templates/usuario/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}Edit Usuario{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Usuario</h1>
 
     {{ include('usuario/_form.html.twig', {'button_label': 'Update'}) }}
